<resources>
    <string name="app_name">WebBroswerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_next_page">go to next page</string>
    <string name="go_back_to_the_page">go back to the page</string>
    <string name="go_to_the_url">go to the url</string>
    <string name="add_new_page">add new page</string>
    <string name="save_marks">save marks</string>
    <string name="display_bookmarks">display bookmarks</string>
    <string name="deleteicon">deleteIcon</string>
    <string name="close">Close</string>
    <string name="action_share">action share</string>
</resources>